syntax = "proto3";

package comment;

service CommentService {
  rpc Create(Comment) returns (Comment);
  rpc GetComment(Get) returns (Comment);
  rpc GetAllComment(GetRequest) returns (GetResponse);
  rpc UpdateComment(Comment) returns (Comment);
  rpc DeleteComment(Get) returns (Tf);
  rpc GetCommentByPostId(GetCommentByPostIdRequest) returns (GetCommentByPostIdResponse);
}

message Tf {
  bool tf = 1;
}

message GetRequest{
  int64 page = 1;
  int64 limit = 2;
}

message Get{
  string id = 1;
}

message GetResponse{
  repeated Comment comments = 1;
}

message Comment{
  string id = 1;
  string description = 2;
  string post_id = 3;
  string owner_id = 4;
  string created_at = 5;
  string updated_at = 6;
  User user = 7;
  Post post = 8;
}

message Post {
  string title = 1;
  string content = 2;
  string image_url = 3;
  string id = 4;
  string owner_id = 5;
  int32 likes = 6;
  int32 views = 7;
  string category = 8;
  string created_at = 9;
  string updated_at = 10;
}

message User {
  string first_name = 1;
  string last_name = 2;
  string username = 3;
  string role = 4;
  string password = 5;
  string email = 6;
  string id = 7;
  string refreshToken = 8;
  string created_at = 9;
  string updated_at = 10;
}


message GetCommentByPostIdRequest{
  string post_id = 1;
}

message GetCommentByPostIdResponse{
  repeated Comment comments = 1;
}


